// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css @supports 1`] = `
@supports (display: grid) {
  .emotion-0 {
    display: grid;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`css array fallback 1`] = `
.emotion-0 {
  color: yellow;
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`css array with explicit false 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
/>
`;

exports[`css array with explicit true 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
/>
`;

exports[`css auto px 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 10px;
  --custom: 5;
}

<div
  className="emotion-0"
/>
`;

exports[`css boolean as value 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
/>
`;

exports[`css composition stuff 1`] = `
.emotion-0 {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
  className="emotion-0"
/>
`;

exports[`css composition stuff 2`] = `
.emotion-0 {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
  className="emotion-0"
/>
`;

exports[`css composition with objects 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 30px;
  height: calc(40vw - 50px);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-0:hover {
  color: blue;
}

.emotion-0:after {
  content: " ";
  color: red;
}

@media (min-width: 420px) {
  .emotion-0 {
    color: green;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`css computed key is only dynamic 1`] = `
.emotion-0 {
  font-size: 10px;
  width: 20px;
}

<div
  className="emotion-0"
/>
`;

exports[`css css variables 1`] = `
.emotion-0 {
  --some-var: 1px;
  width: var(--some-var);
}

<div
  className="emotion-0"
/>
`;

exports[`css explicit & 1`] = `
.emotion-0.another-class {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0 another-class"
/>
`;

exports[`css explicit & 2`] = `
".css-5v9d41-cls1.another-class {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}"
`;

exports[`css explicit false 1`] = `
<div
  className="emotion-0"
/>
`;

exports[`css falsy property value in object 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
/>
`;

exports[`css falsy value in nested selector on object 1`] = `
.emotion-0:hover {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`css float property 1`] = `
.emotion-0 {
  float: left;
}

<div
  className="emotion-0"
/>
`;

exports[`css flushes correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
/>
`;

exports[`css flushes correctly 2`] = `
<div
  className="css-15gpprc-cls1"
/>
`;

exports[`css handles array of objects 1`] = `
.emotion-0 {
  height: 50px;
  width: 20px;
}

<div
  className="emotion-0"
/>
`;

exports[`css handles more than 10 dynamic properties 1`] = `
.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border-right: solid blue 54px;
  background: white;
  color: black;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
}

<div
  className="emotion-0"
/>
`;

exports[`css handles objects 1`] = `
.emotion-0 {
  float: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: blue;
  font-size: 20px;
  height: 50px;
  width: 20px;
}

<div
  className="emotion-0"
/>
`;

exports[`css manually use label property 1`] = `
.emotion-0 {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`css manually use label property 2`] = `
".css-3uek40-wow-cls1 {
  color: hotpink;
}"
`;

exports[`css media query specificity 1`] = `
".css-xlxbv2-cls {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

@media (min-width: 420px) {
  .css-xlxbv2-cls {
    width: 96px;
    height: 96px;
  }
}"
`;

exports[`css media query specificity 2`] = `
.emotion-0 {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

@media (min-width: 420px) {
  .emotion-0 {
    width: 96px;
    height: 96px;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`css multiline declaration 1`] = `
.emotion-0 {
  display: grid;
  grid: 'AppBar' auto 'Main' 1fr/1fr;
}

<div
  className="emotion-0"
/>
`;

exports[`css multiline selector 1`] = `
.emotion-0 .my-class:hover .its-child {
  background: pink;
}

<div
  className="emotion-0"
/>
`;

exports[`css nested 1`] = `
.emotion-0 {
  color: yellow;
}

.emotion-0 .some-class {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .some-class .some-other-class {
  background-color: hotpink;
}

@media (max-width: 600px) {
  .emotion-0 .some-class {
    background-color: pink;
  }
}

<div
  className="emotion-0"
>
  <div
    className="some-class"
  >
    <div
      className="some-other-class"
    />
  </div>
</div>
`;

exports[`css nested array 1`] = `
.emotion-0 {
  display: inline;
  display: inline-block;
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: table;
  color: darkorchid;
  font-size: 16px;
}

.emotion-0:after {
  background-color: aquamarine;
}

<div
  className="emotion-0"
/>
`;

exports[`css nested at rule 1`] = `
@media (min-width: 980px) {
  .emotion-0 {
    background-color: blue;
  }

  @supports (width: 100vw) {
    .emotion-0 {
      background-color: red;
    }
  }
}

<div
  className="emotion-0"
/>
`;

exports[`css nested at rules 1`] = `
@media (min-width: 420px) {
  .glamor-0 {
    color: pink;
  }
}

@media (min-width: 420px) and  (max-width: 500px) {
  .glamor-0 {
    color: hotpink;
  }
}

@supports (display: grid) {
  .glamor-0 {
    display: grid;
  }
}

@supports (display: grid) and  ((display: -webkit-box) or (display: flex)) {
  .glamor-0 {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css null rule 1`] = `
<div
  className="emotion-0"
/>
`;

exports[`css null value 1`] = `
<div
  className="emotion-0"
/>
`;

exports[`css random expression 1`] = `
.emotion-0 {
  font-size: 20px;
  background: green;
}

@media (min-width: 420px) {
  .emotion-0 {
    color: blue;
    width: 96px;
    height: 96px;
    line-height: 40px;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`css random interpolation with undefined values 1`] = `
.emotion-0 {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
  className="emotion-0"
/>
`;

exports[`css registered styles as nested selector value in object 1`] = `
.emotion-0:hover {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`css rule after media query 1`] = `
@media (min-width: 600px) {
  .emotion-0 {
    color: green;
  }
}

.emotion-0:hover {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`css simple composition 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-0:hover {
  color: hotpink;
}

<div
  className="emotion-0"
/>
`;

exports[`css weakmap 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
/>
`;

exports[`css weakmap 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
/>
`;
